# duck_updater

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
scripts/: create_cronjob.sh  create_task.bat
src/: config.rs  main.rs
